5.0b3 -> 5.0b4:
    - jbj: add a (unused) flags arg to rpmnsProbeSignature.
    - jbj: change rpmnsProbeSignature to return rpmRC (note: success is 0 now).
    - jbj: add --rpmnsdebug to see rpmnsProbeSignature() spew.
    - jbj: permit URI's in signature(...) arguments.
    - jbj: fix: argvSplit was doing ltrim and skipping spans of seperators.
    - rse: improve RPM Lua function util.rsubst(): perform repeated substitutions and honor prolog/epilog parts
    - jbj: re-add all the debugging spew under --rpmnsdebug for now.
    - jbj: functional signature(...) name space probe.
    - jbj: add rpmnsProbeSignature() & "signature(/text:/sig) = /pub:id" probe.
    - jbj: pgpReadPkts: truncate binary encoded pgp pktlen to actual length.
    - jbj: pgpReadPkts: identify binary encoded pgp pkts correctly.
    - jbj: fix: remove unused assertion.
    - jbj: fix: undo deliberate damage from rpm's RHL8 security audit. ptooey!
    - rse: allow assertion of a particular GnuPG signing key via "gnupg(<path>) = <fingerprint>" in dependencies
    - rse: fix invocaction of GnuPG's gpg(1) command for gnupg(<path>) dependency assertions
    - afb: hide the rpmlib Version/Timestamp/Vendor markers spew unless verbose.
    - rse: fix %{@foo} macro stack expansion including also the value at the stack bottom
    - rse: remove the confusing additional --predefine behaviour when --define is used as the first CLI option
    - jbj: simplify expandFIFO().
    - jbj: use "\n", not ",", as the default for %@foo expansion.
    - jbj: fixup %{@foo:, } per rse comments.
    - jbj: convert %{@foo:|} to "foo|bar|quux" tuple. %@foo assumes CSV comma.
    - rse: implement "rpm --undefine <macro>" as the counterpart to "rpm --define '<macro> <value>'"
    - afb: added %__objext,%__libext,%__shlibext,%__exeext for file extensions.
    - rse: make size of line buffer for .spec file parsing run-time configurable via macro _spec_line_buffer_size